--- a/public/index.html
+++ b/public/index.html
@@ -14,4 +14,5 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <script src="//at.alicdn.com/t/font_2914722_fl3ta567sdd.js"></script>
 </html>
