--- a/public/index.html
+++ b/public/index.html
@@ -15,4 +15,5 @@
     <!-- built files will be auto injected -->
   </body>
   <script src="//at.alicdn.com/t/font_2914722_fl3ta567sdd.js"></script>
+  <script src="//at.alicdn.com/t/font_2914820_kwbszt9m3o.js"></script>
 </html>
